--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,7 +1,7 @@
 body {
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(https://i.pinimg.com/564x/53/2e/f5/532ef5adb18b86509144a1ab7ed9e33a.jpg);
+    url(https://i.pinimg.com/564x/53/2e/f5/532ef5adb18b86509144a1ab7ed9e33a.jpg&ixlib=rb-1.2.1&auto=format&fit=crop&w=1041&q=80);
   background-size: cover;
   background-position: center;
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
