--- a/views/campgrounds/home.ejs
+++ b/views/campgrounds/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Panda Review</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,10 +17,10 @@
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
       <header class="">
         <div>
-          <h3 class="float-start mb-0">Yelp Camp</h3>
+          <h3 class="float-start mb-0">Panda Review</h3>
           <nav class="nav nav-masthead justify-content-center float-end">
             <a class="nav-link active" aria-currenmt="page" href="/">Home</a>
-            <a class="nav-link" href="/campgrounds">Campgrounds</a>
+            <a class="nav-link" href="/campgrounds">Restaurants</a>
             <% if(!currentUser) { %>
             <a class="nav-link" href="/login">Login</a>
             <a class="nav-link" href="/register">Register</a>
@@ -31,14 +31,13 @@
         </div>
       </header>
       <main class="m-auto px-3">
-        <h1>Yelp Camp</h1>
+        <h1>Panda Review</h1>
         <p class="lead">
-          Welcome to YelpCamp! <br />
-          Jump right in and explore our many campgrounds. <br />
+          Jump right in and explore our many restaurants. <br />
           Feel free to share some of your own and comment on others!
         </p>
         <a href="/campgrounds" class="btn btn-lrg btn-secondary fw-bold"
-          >View Campgrounds</a
+          >View Restaurants</a
         >
       </main>
       <footer>
