--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-  <h1 class="text-center">New Campground</h1>
+  <h1 class="text-center">New Restaurant</h1>
   <div class="col-md-6 offset-md-3">
     <form
       action="/campgrounds"
@@ -100,10 +100,10 @@
         </div>
       </div>
       <div class="d-grid">
-        <button class="btn btn-success mt-3 mb-3">Add Campground</button>
+        <button class="btn btn-success mt-3 mb-3">Add Restaurant</button>
       </div>
       <p>
-        <a class="mt-3" href="/campgrounds">Back to Index</a>
+        <a class="mt-3" href="/restaruants">Back to Index</a>
       </p>
     </form>
   </div>
