--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Yelp Camp</a>
+    <a class="navbar-brand" href="#">Panda Review</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,8 +15,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/campgrounds">Campgrounds</a>
-        <a class="nav-link" href="/campgrounds/new">New Campground</a>
+        <a class="nav-link" href="/campgrounds">Restaurants</a>
+        <a class="nav-link" href="/campgrounds/new">New Restaurant</a>
       </div>
       <div class="navbar-nav ms-auto">
         <%if(!currentUser){%>
