--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Yelp Camp</a>
+    <a class="navbar-brand" href="#">Review Panda</a>
     <button
       class="navbar-toggler"
       type="button"
