--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -68,7 +68,7 @@
         </form>
       </div>
       <div class="card-footer text-muted">
-        <a href="/restaurants" class="text-muted">All Restauants</a>
+        <a href="/restaurants" class="text-muted">All Restaurants</a>
       </div>
       <% }%>
     </div>
