--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark py-3 mt-auto">
   <div>
-    <span class="text-muted container">&copyYelpCamp 2020</span>
+    <span class="text-muted container">&copyPandaReview 2022</span>
   </div>
 </footer>
