--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -175,7 +175,7 @@
 
         <% if(currentUser && review.author.equals(currentUser._id)) {%>
         <form
-          action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
+          action="/restaurants/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
           method="POST"
         >
           <button class="btn btn-sm btn-danger">Delete</button>
