Added default login

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -21,6 +21,7 @@
                 name="username"
                 autofocus
                 required
+                value="admin"
               />
               <div class="valid-feedback">Looks Good!</div>
             </div>
@@ -32,6 +33,7 @@
                 id="password"
                 name="password"
                 required
+                value="admin"
               />
               <div class="valid-feedback">Looks Good!</div>
             </div>
