--- a/views/restaurants/home.ejs
+++ b/views/restaurants/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Panda Review</title>
+    <title>David Kielty</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/stylesheets/home.css" />
+    <link rel="icon" type="image/gif/pn" href="../../favicon.png" />
   </head>
   <body class="d-flex text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
