--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -32,3 +32,9 @@
   </div>
 </div>
 <% } %>
+
+<script>
+  const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+  const campgrounds = { features: "<%-JSON.stringify(campgrounds)%>" };
+</script>
+<script src="/javascripts/clusterMap.js"></script>
