--- a/views/restaurants/edit.ejs
+++ b/views/restaurants/edit.ejs
@@ -3,7 +3,7 @@
   <h1 class="text-center">Edit Restaurant</h1>
   <div class="col-md-6 offset-md-3">
     <form
-      action="/restaurants/<%=campground._id%>?_method=PUT"
+      action="/restaurants/<%=restaurant._id%>?_method=PUT"
       method="POST"
       novalidate
       class="validated-form"
@@ -14,8 +14,8 @@
         <input
           class="form-control"
           type="text"
-          name="campground[title]"
-          value="<%=campground.title%>"
+          name="restaurant[title]"
+          value="<%=restaurant.title%>"
           required
         />
         <div class="valid-feedback">Looks Good!</div>
@@ -25,8 +25,8 @@
         <input
           class="form-control"
           type="text"
-          name="campground[location]"
-          value="<%=campground.location%>"
+          name="restaurant[location]"
+          value="<%=restaurant.location%>"
           required
         />
         <div class="valid-feedback">Looks Good!</div>
@@ -36,10 +36,10 @@
         <textarea
           class="form-control mb-3"
           type="text"
-          name="campground[description]"
+          name="restaurant[description]"
           required
         >
-<%=campground.description%></textarea
+<%=restaurant.description%></textarea
         >
         <div class="valid-feedback">Looks Good!</div>
         <label class="form-label" for="price">Price </label>
@@ -48,13 +48,13 @@
             <span class="input-group-text" id="basic-addon1">£</span>
           </div>
           <input
-            name="campground[price]"
+            name="restaurant[price]"
             type="Number"
             class="form-control mb-3"
             aria-label="Price"
             aria-describedby="basic-addon1"
             placeholder="0.00"
-            value="<%=campground.price%>"
+            value="<%=restaurant.price%>"
             required
           />
           <div class="valid-feedback">Looks Good!</div>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="mb-3">
-        <% campground.images.forEach(function(img, i) { %>
+        <% restaurant.images.forEach(function(img, i) { %>
         <img src="<%= img.thumbnail %> " class="img-thumbnail" alt="" />
         <div class="form-check-inline">
           <input
@@ -88,7 +88,7 @@
       </div>
       <button class="btn btn-info mt-3 mb-3">Update Restaurant</button>
       <p>
-        <a href="/restaurants/<%= campground._id %>">Back to Restauants</a>
+        <a href="/restaurants/<%= restaurant._id %>">Back to Restauants</a>
       </p>
     </form>
   </div>
