--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -3,12 +3,12 @@
 <div id="cluster-map"></div>
 <h1>All Restaurants</h1>
 
-<% for(let campground of campgrounds){ %>
+<% for(let restaurant of restaurants){ %>
 <div class="card mb-3 mt-6">
   <div class="row">
     <div class="col-md-4">
-      <% if(campground.images.length) { %>
-      <img src="<%=campground.images[0].url%>" alt="" class="img-fluid" />
+      <% if(restaurant.images.length) { %>
+      <img src="<%=restaurant.images[0].url%>" alt="" class="img-fluid" />
       <% } else { %>
       <img
         src="https://res.cloudinary.com/dg0it3ba2/image/upload/v1629896213/YelpCamp/thpyejss0xcit5mlpvkm.jpg"
@@ -19,13 +19,13 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h4 class="card-title"><%=campground.title%></h4>
-        <p class="card-text"><%=campground.description%></p>
+        <h4 class="card-title"><%=restaurant.title%></h4>
+        <p class="card-text"><%=restaurant.description%></p>
         <p class="card-text">
-          <small class="text-muted"><%=campground.location%></small>
+          <small class="text-muted"><%=restaurant.location%></small>
         </p>
-        <a href="/restaurants/<%=campground._id%>" class="btn-primary btn"
-          >View <%=campground.title%></a
+        <a href="/restaurants/<%=restaurant._id%>" class="btn-primary btn"
+          >View <%=restaurant.title%></a
         >
       </div>
     </div>
@@ -35,6 +35,6 @@
 
 <script>
   const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
-  const campgrounds = { features: "<%-JSON.stringify(campgrounds)%>" };
+  const restaurants = {features: <%-JSON.stringify(restaurants)%>};
 </script>
 <script src="/javascripts/clusterMap.js"></script>
