--- a/views/restaurants/new.ejs
+++ b/views/restaurants/new.ejs
@@ -15,7 +15,7 @@
           class="form-control"
           type="text"
           id="title"
-          name="campground[title]"
+          name="restaurant[title]"
           required
         />
         <div class="valid-feedback">Looks Good!</div>
@@ -26,7 +26,7 @@
           class="form-control"
           type="text"
           id="location"
-          name="campground[location]"
+          name="restaurant[location]"
           required
         />
         <div class="valid-feedback">Looks Good!</div>
@@ -55,7 +55,7 @@
           class="form-control"
           type="text"
           id="image"
-          name="campground[image]"
+          name="restaurant[image]"
           required
         />
         <div class="valid-feedback">Looks Good!</div>
@@ -66,7 +66,7 @@
           class="form-control mb-3"
           type="text"
           id="description"
-          name="campground[description]"
+          name="restaurant[description]"
           required
         >
         </textarea>
@@ -77,7 +77,7 @@
             <span class="input-group-text" id="basic-addon1">£</span>
           </div>
           <input
-            name="campground[price]"
+            name="restaurant[price]"
             type="text"
             id="price"
             class="form-control mb-3"
