--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -1,17 +1,15 @@
 <% layout('layouts/boilerplate') %>
 <link rel="stylesheet" href="/stylesheets/stars.css" />
 
-
-
 <div class="row">
   <div class="col-6">
     <div
-      id="campgroundCarousel""
+      id="restaurantCarousel""
       class="carousel slide"
       data-bs-ride="carousel"
     >
       <div class="carousel-inner">
-        <% campground.images.forEach((img, i) => { %>
+        <% restaurant.images.forEach((img, i) => { %>
 
         <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
           <img src="<%= img.url %> " class="d-block w-100" alt="" />
@@ -19,11 +17,11 @@
         <% }) %>
       </div>
 
-      <% if(campground.images.length >1) { %>
+      <% if(restaurant.images.length >1) { %>
       <button
         class="carousel-control-prev"
         type="button"
-        data-bs-target="#campgroundCarousel"
+        data-bs-target="#restaurantCarousel"
         data-bs-slide="prev"
       >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -32,7 +30,7 @@
       <button
         class="carousel-control-next"
         type="button"
-        data-bs-target="#campgroundCarousel"
+        data-bs-target="#restaurantCarousel"
         data-bs-slide="next"
       >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -42,26 +40,26 @@
     </div>
     <div class="card mb-3">
       <div class="card-body">
-        <h5 class="card-title"><%= campground.title %></h5>
-        <p class="card-text"><%= campground.description %></p>
+        <h5 class="card-title"><%= restaurant.title %></h5>
+        <p class="card-text"><%= restaurant.description %></p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item"><%= campground.location %></li>
+        <li class="list-group-item"><%= restaurant.location %></li>
         <li class="list-group-item text-muted">
-          Submitted by <%= campground.author.username %>
+          Submitted by <%= restaurant.author.username %>
         </li>
-        <li class="list-group-item">£<%= campground.price %>/dish</li>
+        <li class="list-group-item">£<%= restaurant.price %>/dish</li>
       </ul>
-      <% if(currentUser && campground.author.equals(currentUser._id)){%>
+      <% if(currentUser && restaurant.author.equals(currentUser._id)){%>
       <div class="card-body">
         <a
-          href="/restaurants/<%=campground._id%>/edit"
+          href="/restaurants/<%=restaurant._id%>/edit"
           class="card-link btn btn-info"
           >Edit</a
         >
         <form
           class="d-inline mx-3"
-          action="/restaurants/<%=campground._id%>?_method=DELETE"
+          action="/restaurants/<%=restaurant._id%>?_method=DELETE"
           method="POST"
         >
           <button class="card-link btn btn-danger">Delete</button>
@@ -83,7 +81,7 @@
     <%if (currentUser) {%>
     <h4>Leave a Review!</h4>
     <form
-      action="/restaurants/<%=campground._id%>/reviews"
+      action="/restaurants/<%=restaurant._id%>/reviews"
       method="POST"
       class="mb-5 validated-form"
       novalidate
@@ -161,7 +159,7 @@
       </div>
       <button class="btn btn-success mb-3">Submit</button>
     </form>
-    <%}%> <% for(let review of campground.reviews) {%>
+    <%}%> <% for(let review of restaurant.reviews) {%>
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title"><%= review.author.username %></h5>
@@ -175,7 +173,7 @@
 
         <% if(currentUser && review.author.equals(currentUser._id)) {%>
         <form
-          action="/restaurants/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
+          action="/restaurants/<%=restaurant._id%>/reviews/<%=review._id%>?_method=DELETE"
           method="POST"
         >
           <button class="btn btn-sm btn-danger">Delete</button>
@@ -189,7 +187,7 @@
 
 <script>
   const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-  const campground = "<%-JSON.stringify(campground)%>";
+  const restaurant = <%-JSON.stringify(restaurant)%>;
 </script>
 
 <script src="/javascripts/showPageMap.js"></script>
